# TelegramBot

./: .breakpoints  .gitignore  db.py  main.py  maintank.json  meme.py  overwatch.py  pyproject.toml  reinhardt.py  requirements.txt  utils.py
data/: development.txt  quotes.txt  story.txt  strategy.txt
